Add input for new task title

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <main>
       <div class="add-task-container">
         <button id="add-task-button">Add New Task</button>
+
+        <input type="text" name="title" id="title-input" placeholder="Task title goes here">
       </div>
       <div class="tasks-container">
 
