--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
             <option value="high">High</option>
           </select>
         </div>
+
+        <div class="field">
+          <label for="due-date-input">Due Date</label>
+          <input type="date" name="due-date" id="due-date-input">
+        </div>
       </div>
       <div class="tasks-container">
 
