Change add-task-button value

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <main>
       <div class="add-task-container">
-        <button id="add-task-button">Add New Task</button>
+        <button id="add-task-button">New Task</button>
 
         <div class="field">
           <label for="title-input">Title (required)</label>
