--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
 <body>
   <div class="container">
-    <main>
-      <div class="add-task-container">
-        <button id="add-task-button">New Task</button>
-
+    <div class="modal hidden">
+      <button id="close-modal-button">⨉</button>
+      <div class="modal-main">
         <div class="field">
           <label for="title-input">Title (required)</label>
           <input type="text" name="title" id="title-input" placeholder="Task title goes here">
@@ -37,6 +36,16 @@
           <label for="due-date-input">Due Date</label>
           <input type="date" name="due-date" id="due-date-input">
         </div>
+
+        <button id="submit-task-button">Submit Task</button>
+      </div>
+    </div>
+
+    <div class="overlay hidden"></div>
+
+    <main>
+      <div class="add-task-container">
+        <button id="add-task-button">New Task</button>
       </div>
       <div class="tasks-container">
 
