Add id and change index.html ids

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <div class="container">
-    <div class="modal hidden">
-      <button class="close-button" id="close-modal-button">⨉</button>
+    <div id="add-task-modal" class="modal hidden">
+      <button class="close-button" id="close-add-task-modal-button">⨉</button>
       <div class="modal-main">
         <div class="field">
           <label for="title-input">Title (required)</label>
