Make changes to ids in main.js

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
       <div class="modal-main">
         <div class="field">
           <label for="title-input">Title (required)</label>
-          <input type="text" name="title" id="title-input" placeholder="Task title goes here">
+          <input type="text" name="title" id="task-title-input" placeholder="Task title goes here">
         </div>
 
         <div class="field description-field">
           <label for="description-input">Description</label>
-          <textarea name="description" id="description-input" cols="50" rows="10"></textarea>
+          <textarea name="description" id="task-description-input" cols="50" rows="10"></textarea>
         </div>
 
         <div class="field">
           <label for="priority-input">Priority</label>
-          <select name="priority" id="priority-input">
+          <select name="priority" id="task-priority-input">
             <option value="low">Low</option>
             <option value="mid">Mid</option>
             <option value="high">High</option>
@@ -34,7 +34,7 @@
 
         <div class="field">
           <label for="due-date-input">Due Date</label>
-          <input type="date" name="due-date" id="due-date-input">
+          <input type="date" name="due-date" id="task-due-date-input">
         </div>
 
         <button id="submit-task-button">Submit Task</button>
