Implement adding and changing current projects

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       <div class="main-top">
         <button id="add-task-button">New Task</button>
       </div>
+      <h1 class="current-project-title"></h1>
       <div class="tasks-container">
 
       </div>
